# stock_analyize-main

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  analyzer.py  main.py  pyproject.toml  run.bat  run.sh  visualizer.py
.claude/: settings.local.json
.github/workflows/: test.yml
.workbuddy/memory/: 2026-05-06.md  MEMORY.md
cache/: alert_state.json
config/: a_stock.yaml  a_stock.yaml.bak.1  alerts.yaml  backtest_presets.yaml  factors.yaml  indicators.yaml  price_alerts.yaml  scheduler.yaml  scraper.yaml  scraper.yaml.bak.2  screen_config.yaml
config/stocks/: a_stock.yaml  hk_stock.yaml  us_stock.yaml
output/: earnings_calendar.csv  earnings_monitor_events.csv  三市场四格估值综合分析报告.md
output/scraper/: holdings_20260420.csv  news_20260420.csv  news_20260421.csv  news_20260422.csv  research_20260421.csv
scratch/: check_hk_cols.py  check_spot.py  debug_hk.py  fast_test.py  test_ak_us.py  test_amd.py  test_backtest_screener.py  test_breakout.py  test_bs_div.py  test_condition_freq.py  test_debug_bt.py  test_divergence.py  test_e2e_backtest.py  test_jingfang.py  test_ma_bull.py  test_perf.py  test_precompute.py  test_provider_us.py  test_sanhua.py  test_screener.py
src/analysis/factor/: __init__.py  engine.py  fcf_analyzer.py  valuation.py
src/analysis/screening/: __init__.py  conditions.py  config_schema.py  data_provider.py  screener.py
src/analysis/technical/: __init__.py  divergence.py  indicators.py
src/automation/: scheduler.py  scheduler_manager.py
src/automation/alert/: __init__.py  bark.py  base.py  console.py  pushplus.py  state.py
src/automation/monitor/: base.py  earnings_monitor.py  price_monitor.py
src/core/: analyzer.py  data_fetcher.py  visualizer.py
src/data/: fcf_data_fetcher.py
src/screener/: __init__.py  conditions.py  config_schema.py  data_provider.py  screener.py
src/utils/: exception_handler.py  logger.py  name_resolver.py
src/web/: app.py  utils.py
stock_analyize-main/: .dockerignore  .gitignore  CLAUDE.md  analyzer.py  data_fetcher.py  docker-compose.yml  logger.py  main.py  requirements.txt  run.sh  visualizer.py
stock_analyize-main/.claude/: launch.json  settings.local.json
stock_analyize-main/config/: a_stock.yaml  backtest_presets.yaml  earnings_monitor.yaml  factors.yaml  factors.yaml.bak.1  price_alerts.yaml  scheduler.yaml  scraper.yaml.bak.1  screen_config.yaml  us_stock.yaml
stock_analyize-main/tests/: conftest.py  test_earnings_monitor.py  test_technical.py
tests/: test_alert.py  test_analyzer.py  test_divergence.py  test_earnings_monitor.py  test_factors.py  test_price_monitor.py  test_scheduler.py  test_scraper.py  test_screener.py
(+92 files in other folders)
