[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "stock-analyize"
version = "1.0.0"
description = "A股/港股/美股多市场量化投研分析平台（含估值/因子/回测/自动化）"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "tenseven" }]
keywords = ["stock", "quantitative", "factor", "backtest", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
stock-analyze = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ========================
# Pytest 配置
# ========================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]
markers = [
    "unit: 单元测试（不依赖网络/外部服务）",
    "integration: 集成测试（需要真实数据源）",
    "slow: 耗时较长的测试",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

# ========================
# Ruff 代码规范配置
# ========================
[tool.ruff]
target-version = "py39"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",   # 行过长（由 line-length 控制）
    "B008",   # 函数默认参数中调用函数
    "B904",   # raise ... from
    "E402",   # 模块级别 import 不在顶部（matplotlib.use 需要在 import 前）
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ========================
# Coverage 配置
# ========================
[tool.coverage.run]
source = ["src"]
omit = [
    "src/visualization/gui/*",
    "src/automation/alert/wechat_alert.py",
    "src/automation/alert/dingtalk_alert.py",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "\\.\\.\\.",
]
